Chapter 19: Securing Applications in Kubernetes/baseline-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: baseline-ns
labels:
  pod-security.kubernetes.io/enforce: baseline
  pod-security.kubernetes.io/enforce-version: v1.22
  pod-security.kubernetes.io/audit: restricted
  pod-security.kubernetes.io/audit-version: v1.22
  pod-security.kubernetes.io/warn: restricted
  pod-security.kubernetes.io/warn-version: v1.22
