Chapter 19: Securing Applications in Kubernetes/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: kuard-networkpolicy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
